--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -33,3 +33,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+###################
+#     FLYWAY
+###################
+spring.flyway.baselineOnMigrate = true
+spring.flyway.enabled = false
